--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <body>
         <div>
             <div class="center">
-                <div class="title">Fundus Image Classifier</div>
+                <div class="title">眼底图片诊断</div>
                 <div class="content">
                     <div class="no-display">
                         <input id="file-input" class="no-display" type="file" name="file" accept="image/*" onchange="showPicked(this)">
                     </div>
-                    <button class="choose-file-button" type="button" onclick="showPicker()">Select Image</button>
+                    <button class="choose-file-button" type="button" onclick="showPicker()">选择图片</button>
                     <div class="upload-label">
-                        <label id="upload-label">No file chosen</label>
+                        <label id="upload-label">未选择图片</label>
                     </div>
                     <div>
                         <img id="image-picked" class="no-display" alt="Chosen Image" height="200">
                     </div>
                     <div class="analyze">
-                        <button id="analyze-button" class="analyze-button" type="button" onclick="analyze()">Analyze</button>
+                        <button id="analyze-button" class="analyze-button" type="button" onclick="analyze()">分析</button>
                     </div>
                     <div class="result-label">
                         <label id="result-label"></label>
