增增加标题

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         
         <link rel="stylesheet" href="./file/style.css">
         <script src="./file/client.js"></script>
+		<title>眼底图片诊断</title>
+		<link rel="icon" type="image/x-icon" href="./image/yan.ico"
     </head>
     <body>
         <div>
